MFC r242127, r240078, r240609, r241988, r242129, r242223, r242438,   r242453, r242455 and r242458:

Add full support for Fast Track Ultra 8R from M-audio.

Implement support for USB Audio v2.0.

Remove some redundant USB audio v1.0 debug data. Use lsusb instead.

Implement support for the so-called USB feedback endpoint for USB
audio devices.

Export all mixer nodes into dev.pcm.X.mixer.Y sysctl nodes.

Fix a memory leak of mixer data at USB audio device detach.

PR:   usb/171254

Former-commit-id: 8c80ba78a818df06808dcd0eb5a884f59ad26141